[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/ManualTranslate.gd" type="Script" id=1]

[node name="ManualTranslate" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 5

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 175.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "1. Open Google translate (click to open) [color=#6ad2fc][url]https://translate.google.com/?tab=wT&sl=zh-CN&tl=en&op=docs[/url][/color]
2. Upload [b]%s[/b] from (click to copy) [color=#6ad2fc][url]%s[/url][/color] folder to Google translate
3. Copy whole translated text using CTRL + A to select all and then CTRL + C to copy selection
4. Paste translated text into translations field below with CTRL + V
5. Click Apply (If button is disabled then you copied it wrong, because number of lines does not match)
6. If there is still some untranslated text then go back to point 2 (There will be always few lines that Google is not able to translate)
7. Translation is done. Start LonaRPG and switch language to MTL"
text = "1. Open Google translate (click to open) https://translate.google.com/?tab=wT&sl=zh-CN&tl=en&op=docs
2. Upload %s from (click to copy) %s folder to Google translate
3. Copy whole translated text using CTRL + A to select all and then CTRL + C to copy selection
4. Paste translated text into translations field below with CTRL + V
5. Click Apply (If button is disabled then you copied it wrong, because number of lines does not match)
6. If there is still some untranslated text then go back to point 2 (There will be always few lines that Google is not able to translate)
7. Translation is done. Start LonaRPG and switch language to MTL"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 1004.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Untranslated"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceText" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
show_line_numbers = true

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 500.0
margin_bottom = 24.0
text = "Translations"
align = 1

[node name="TargetText" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 497.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Go back"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 507.0
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Amount and order of lines in translations must match with untranslated text."
size_flags_horizontal = 3
text = "Apply"

[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer2/TargetText" to="." method="_on_TargetText_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_ApplyButton_pressed"]
